fix spacing value

--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -180,7 +180,7 @@ template {
   --nav-item-font-family: var(--font-family-title);
   --nav-item-font-weight: var(--font-weight-bold);
   --nav-item-font-size: var(--font-size-medium);
-  --nav-item-letter-spacing: 4%rem;
+  --nav-item-letter-spacing: 0.04rem;
   --nav-item-display: inline-block;
   --nav-item-marginto: 0 0 3rem 0;
   --nav-item-link-hover: var(--color-primary);
@@ -197,8 +197,7 @@ template {
   text-align: center;
 }
 
-.nav,
-.nav-item {
+.nav .nav-item {
   font-family: var(--nav-item-font-family);
   font-weight: var(--nav-item-font-weight);
   font-size: var(--nav-item-font-size);
@@ -207,14 +206,12 @@ template {
   margin: var(--nav-item-margin);
 }
 
-.nav,
-.nav-link {
+.nav .nav-link {
   display: block;
   padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
-.nav,
-.nav-link {
+.nav .nav-link {
   color: var(--nav-item-link-hover);
 }
 
